# libnum

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
cmake/: clang_tidy.cmake  sanitizers.cmake  warnings.cmake
include/libnum/: int128.hpp  uint128.hpp
include/libnum/detail/: addcarry.hpp  div.hpp  intrinsics.hpp  mul.hpp  preprocessor.hpp  subborrow.hpp  traits.hpp
test/: CMakeLists.txt  int128.cpp  numeric_limits_check.hpp  uint128.cpp
test/asm/: CMakeLists.txt  run-test.py  uint128_check.cpp
test/assembly/: CMakeLists.txt  run-test.py  uint128.check  uint128.cpp
